--- a/js/views/Map.module.css
+++ b/js/views/Map.module.css
@@ -47,7 +47,12 @@
 
 .tooltip :nth-child(1) span {
     float: right;
+    font-size: 100%;
     cursor: pointer;
+    border: 1px solid rgb(0, 0, 0, 0.87);
+    border-radius: 4px;
+    margin-right: 4px;
+    padding: 0 16px 16px 0;
 }
 
 .scale {
