Enforce min chart height. Allow resizing in singlecell.

--- a/js/chart/chart.module.css
+++ b/js/chart/chart.module.css
@@ -32,7 +32,7 @@
 	display: flex;
 	min-height: 0; /* required for chart resize */
 	min-width: 0; /* required for chart resize */
-	padding: 24px 16px;
+	padding: 24px 16px 4px 16px;
 }
 
 .chartActions {
