--- a/js/views/singlecellChart.module.css
+++ b/js/views/singlecellChart.module.css
@@ -4,4 +4,22 @@
 	border: 1px solid black;
 	margin-right: 5px;
 	padding: 4px;
+	position: relative;
+}
+
+.overlay {
+	pointer-events: none;
+	text-align: center;
+	z-index: 1;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(255, 255, 255, 0.6);
+}
+
+.overlay img {
+	position: absolute;
+	top: 50%;
 }
